# ssgweb

./: .firebaserc  .gitignore  CLAUDE.md  LICENSE  README.md  WORKFLOW.md  firebase.json  package-lock.json  pyproject.toml  requirements.txt
.claude/agents/: blog-post-editor.md
.claude/commands/: prepare-post.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
devlog/: 2025-09-24-add-post-37.txt  2025-09-24-branch-manager.txt  2025-09-24-command-init.txt  2025-09-24-merge-pr-and-deploy.txt  2026-01-07-prune-the-local-branches-create-command.txt  2026-01-07-push-client-edits-and-image.txt  2026-01-30-apa-perspectives-post-pr.txt  2026-02-26-magical-thinking-post-pipeline.md  2026-04-01-publish-ipa-post.txt  2026-04-20-publish-waiting-for-permission.md  2026-04-22-post-publish-and-security-updates.md
drafts/: 2026-03-31_edit-ad-lib.md  2026-04-20_waiting-for-permission.md  couples_podcast.txt  npr_interview.txt  post-2026-02-23.md  post_37.txt  the-garden-of-aging.md
erlenepsyd.com/: pelicanconf.py  publishconf.py  seo_report.html
erlenepsyd.com/content/: abbreviated-cv.md  about-erlene.md  focus-on-assumptions.md  focus-on-change.md
erlenepsyd.com/content/blog/:  rain.md  .joylets.md.swp  10-positives-about-being-older-1.md  10-positives-about-being-older-2.md  10-positives-about-being-older-3.md  aging-script.md  aging-truths.md  apa-perspectives.md  contagion.md  couples-podcast.md  dr-rs-latest-podcast.md  elixir-of-humor.md  focus-on-aging-easier-1.md  focus-on-assumptions.md  focus-on-attitude.md  focus-on-change.md  focus-on-curiosity.md  focus-on-loneliness.md  focus-on-now.md  joy.md  (+39 more)
erlenepsyd.com/output/: archives.html  authors.html  categories.html  dr-rs-latest-podcast-episode.html  focus-on-assumptions.html  focus-on-attitude.html  focus-on-change.html  focus-on-loneliness.html  index.html  tags.html
(+27 files in other folders)
