[tool.poetry]
name = "ssgweb"
version = "0.1.1"
description = "Static Site Generator files for the ErlenePsyD.com website"
authors = ["Neil Johnson <neil@cadent.net>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.9.1"
markdown = "^3.5.1"
typogrify = "^2.0.7"
pelican-image-process = "^2.1.3"
pelican-neighbors = "^1.2.0"
pelican-seo = "^1.2.2"
typing-extensions = "^4.8.0"
pelican-sitemap = "^1.0.2"
Pillow = ">=8.0,<9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
